tests/machine/x/cpp/group_items_iteration.error
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:60:12: error: ‘d’ was not declared in this scope
   60 |   decltype(d.tag) key;
      |            ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:60:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:61:19: error: template argument 1 is invalid
   61 |   std::vector<auto> items;
      |                   ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:61:19: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:23: error: ‘d’ was not declared in this scope
  102 |     std::map<decltype(d.tag), std::vector<auto>> __groups;
      |                       ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:47: error: template argument 1 is invalid
  102 |     std::map<decltype(d.tag), std::vector<auto>> __groups;
      |                                               ^~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:47: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:50: error: template argument 1 is invalid
  102 |     std::map<decltype(d.tag), std::vector<auto>> __groups;
      |                                                  ^~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:50: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:50: error: template argument 3 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:102:50: error: template argument 4 is invalid
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:104:7: error: ‘__groups’ was not declared in this scope; did you mean ‘groups’?
  104 |       __groups[d.tag].push_back(auto{d});
      |       ^~~~~~~~
      |       groups
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:104:39: warning: ‘auto{x}’ only available with ‘-std=c++2b’ or ‘-std=gnu++2b’ [-Wc++23-extensions]
  104 |       __groups[d.tag].push_back(auto{d});
      |                                       ^
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:107:21: error: ‘__groups’ was not declared in this scope; did you mean ‘groups’?
  107 |     for (auto &kv : __groups) {
      |                     ^~~~~~~~
      |                     groups
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:115:21: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  115 |     for (auto x : g.items) {
      |                     ^~~~~
      |                     std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:115:21: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  115 |     for (auto x : g.items) {
      |                     ^~~~~
      |                     std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:118:18: error: no matching function for call to ‘std::vector<int>::push_back(__struct3)’
  118 |     tmp.push_back(__struct3{g.key, total});
      |     ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘__struct3’ to ‘const std::vector<int>::value_type&’ {aka ‘const int&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = int; _Alloc = std::allocator<int>; value_type = int]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘__struct3’ to ‘std::vector<int>::value_type&&’ {aka ‘int&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:124:28: error: request for member ‘tag’ in ‘r’, which is of non-class type ‘int’
  124 |       __items.push_back({r.tag, r});
      |                            ^~~
/tmp/TestCPPCompiler_VMValid_Goldengroup_items_iteration2386512372/001/prog.cpp:124:24: error: no matching function for call to ‘std::vector<std::pair<int, __struct3> >::push_back(<brace-enclosed initializer list>)’
  124 |       __items.push_back({r.tag, r});
      |       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, __struct3>; _Alloc = std::allocator<std::pair<int, __struct3> >; value_type = std::pair<int, __struct3>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, __struct3> >::value_type&’ {aka ‘const std::pair<int, __struct3>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, __struct3>; _Alloc = std::allocator<std::pair<int, __struct3> >; value_type = std::pair<int, __struct3>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, __struct3> >::value_type&&’ {aka ‘std::pair<int, __struct3>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
